<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kstechnologies.NanoScan.DeviceStatusActivity">


    <ProgressBar
        android:id="@+id/pb_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <LinearLayout
        android:id="@+id/ll_batt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="@dimen/dip32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/battery" />

        <TextView
            android:id="@+id/tv_batt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/ll_batt"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_batt"
        android:gravity="center"
        android:minHeight="@dimen/dip32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/ll_temp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_humid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_temp"
        android:gravity="center"
        android:minHeight="@dimen/dip32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/tv_humid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/ll_humid"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_humid"
        android:gravity="center"
        android:minHeight="@dimen/dip32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/device_status" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/not_supported" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/ll_status"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_status"
        android:gravity="center"
        android:minHeight="@dimen/dip32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/error_status" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/not_supported" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/ll_error"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_tempThresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_error"
        android:gravity="center"
        android:minHeight="@dimen/dip32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temp_threshold" />

        <EditText
            android:id="@+id/et_tempThresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/deg_c"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/ll_tempThresh"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/ll_humidThresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_tempThresh"
        android:gravity="center"
        android:minHeight="@dimen/dip32"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/humid_threshold" />

        <EditText
            android:id="@+id/et_humidThresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/relative_humid"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <View
        android:id="@+id/view_humid_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/ll_humidThresh"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btn_update_thresholds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_humid_divider"
        android:layout_marginTop="@dimen/dip8"
        android:background="@color/kst_red"
        android:text="@string/update_thresholds"
        android:textColor="@color/white" />

</RelativeLayout>
