<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kstechnologies.NanoScan.SettingsActivity">

    <LinearLayout
        android:id="@+id/ll_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dip96"
            android:layout_height="@dimen/dip96"
            android:contentDescription="@string/desc_icon"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_logo"
        android:paddingTop="@dimen/dip8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/temperature"
            android:textColor="@color/black" />

        <ToggleButton
            android:id="@+id/tb_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textOff="&#176;C"
            android:textOn="&#176;F" />

    </RelativeLayout>

    <View
        android:id="@+id/view_temp_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_temperature"
        android:background="@color/black"/>

    <RelativeLayout
        android:id="@+id/rl_freq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_temp_divider"
        android:paddingTop="@dimen/dip8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/spatial_freq"
            android:textColor="@color/black" />

        <ToggleButton
            android:id="@+id/tb_spatial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textOff="Wavenumber"
            android:textOn="Wavelength" />

    </RelativeLayout>

    <View
        android:id="@+id/view_freq_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_freq"
        android:background="@color/black"/>

    <RelativeLayout
        android:id="@+id/rl_setNano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_freq_divider"
        android:paddingTop="@dimen/dip8">

        <Button
            android:id="@+id/btn_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/go" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_set"
            android:text="@string/set_nano"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_pref_nano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />

    </RelativeLayout>

    <View
        android:id="@+id/view_set_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_setNano"
        android:background="@color/black"/>

    <RelativeLayout
        android:id="@+id/rl_clearNano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_setNano"
        android:paddingTop="@dimen/dip8">

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/forget" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_forget"
            android:text="@string/clear_nano"
            android:textColor="@color/black" />

    </RelativeLayout>

    <View
        android:id="@+id/view_clear_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_below="@id/rl_clearNano"
        android:layout_marginBottom="@dimen/dip8"
        android:background="@color/black"/>

</RelativeLayout>
